Fixes field preview toggle not to be cut off.

--- a/tool-ui/src/main/webapp/style/v3/index.less
+++ b/tool-ui/src/main/webapp/style/v3/index.less
@@ -684,6 +684,7 @@
   .icon-only;
   .link;
 
+  box-sizing: content-box;
   color: fade(@color-text, 30%);
   display: none;
   padding: 5px;
